--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-#pip freeze > requirements.txt
+# pip freeze > requirements.txt
 
 alabaster @ file:///home/ktietz/src/ci/alabaster_1611921544520/work
 anaconda-client==1.7.2
@@ -8,13 +8,14 @@ anyio @ file:///C:/ci/anyio_1620153418380/work/dist
 appdirs==1.4.4
 argh==0.26.2
 argon2-cffi @ file:///C:/ci/argon2-cffi_1613037959010/work
+asgiref==3.3.4
 asn1crypto @ file:///tmp/build/80754af9/asn1crypto_1596577642040/work
-astroid @ file:///C:/ci/astroid_1613501047216/work
+astroid==2.5.6
 astropy @ file:///C:/ci/astropy_1617745647203/work
 async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
 atomicwrites==1.4.0
 attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
-Automat @ file:///tmp/build/80754af9/automat_1600298431173/work
+Automat==20.2.0
 autopep8 @ file:///tmp/build/80754af9/autopep8_1615918855173/work
 Babel @ file:///tmp/build/80754af9/babel_1607110387436/work
 backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
@@ -23,7 +24,7 @@ backports.shutil-get-terminal-size @ file:///tmp/build/80754af9/backports.shutil
 backports.tempfile @ file:///home/linux1/recipes/ci/backports.tempfile_1610991236607/work
 backports.weakref==1.0.post1
 bcrypt @ file:///C:/ci/bcrypt_1597936263757/work
-beautifulsoup4 @ file:///home/linux1/recipes/ci/beautifulsoup4_1610988766420/work
+beautifulsoup4==4.6.0
 bitarray @ file:///C:/ci/bitarray_1618435038389/work
 bkcharts==0.2
 black==19.10b0
@@ -31,6 +32,7 @@ bleach @ file:///tmp/build/80754af9/bleach_1612211392645/work
 bokeh @ file:///C:/ci/bokeh_1620784067744/work
 boto==2.49.0
 Bottleneck==1.3.2
+branca==0.4.2
 brotlipy==0.7.0
 certifi==2020.12.5
 cffi @ file:///C:/ci/cffi_1613247279197/work
@@ -38,7 +40,7 @@ chardet @ file:///C:/ci/chardet_1607690654534/work
 click @ file:///home/linux1/recipes/ci/click_1610990599742/work
 cloudpickle @ file:///tmp/build/80754af9/cloudpickle_1598884132938/work
 clyent==1.2.2
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
+colorama==0.4.4
 comtypes==1.1.9
 conda==4.10.1
 conda-build==3.21.4
@@ -55,20 +57,19 @@ cycler==0.10.0
 Cython @ file:///C:/ci/cython_1618435363327/work
 cytoolz==0.11.0
 dask @ file:///tmp/build/80754af9/dask-core_1617390489108/work
-DateTime==4.3
 decorator @ file:///tmp/build/80754af9/decorator_1617916966915/work
 defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-Deprecated==1.2.12
 diff-match-patch @ file:///tmp/build/80754af9/diff-match-patch_1594828741838/work
 distributed @ file:///C:/ci/distributed_1617384289923/work
+Django==3.2.3
 docutils @ file:///C:/ci/docutils_1617481617511/work
 entrypoints==0.3
 et-xmlfile==1.0.1
 fastcache==1.1.0
 filelock @ file:///home/linux1/recipes/ci/filelock_1610993975404/work
-finance-datareader==0.9.31
 flake8 @ file:///tmp/build/80754af9/flake8_1615834841867/work
 Flask @ file:///home/ktietz/src/ci/flask_1611932660458/work
+folium==0.12.1
 fsspec @ file:///tmp/build/80754af9/fsspec_1617959894824/work
 future==0.18.2
 gevent @ file:///C:/ci/gevent_1616773090559/work
@@ -80,7 +81,7 @@ HeapDict==1.0.1
 hpack==3.0.0
 html5lib @ file:///tmp/build/80754af9/html5lib_1593446221756/work
 hyperframe==5.2.0
-hyperlink @ file:///tmp/build/80754af9/hyperlink_1610130746837/work
+hyperlink==21.0.0
 idna @ file:///home/linux1/recipes/ci/idna_1610986105248/work
 imagecodecs @ file:///C:/ci/imagecodecs_1617996768495/work
 imageio @ file:///tmp/build/80754af9/imageio_1617700267927/work
@@ -93,8 +94,8 @@ ipykernel @ file:///C:/ci/ipykernel_1596190155316/work/dist/ipykernel-5.3.4-py3-
 ipython @ file:///C:/ci/ipython_1617121002983/work
 ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
 ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1610481889018/work
-isort @ file:///tmp/build/80754af9/isort_1616355431277/work
-itemadapter @ file:///tmp/build/80754af9/itemadapter_1605069490748/work
+isort==5.8.0
+itemadapter==0.2.0
 itemloaders==1.0.4
 itsdangerous @ file:///home/ktietz/src/ci/itsdangerous_1611932585308/work
 jdcal==1.4.1
@@ -102,6 +103,7 @@ jedi @ file:///C:/ci/jedi_1606914528444/work
 Jinja2 @ file:///tmp/build/80754af9/jinja2_1612213139570/work
 jmespath==0.10.0
 joblib @ file:///tmp/build/80754af9/joblib_1613502643832/work
+JPype1 @ file:///C:/ProgramData/Anaconda3/Lib/site-packages/JPype1-1.3.0-cp38-cp38-win_amd64.whl
 json5==0.9.5
 jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
 jupyter==1.0.0
@@ -116,8 +118,8 @@ jupyterlab-server @ file:///tmp/build/80754af9/jupyterlab_server_1617134334258/w
 jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
 keyring @ file:///C:/ci/keyring_1614616910860/work
 kiwisolver @ file:///C:/ci/kiwisolver_1612282606037/work
-KoreaNewsCrawler==1.50
-lazy-object-proxy @ file:///C:/ci/lazy-object-proxy_1616529307648/work
+konlpy==0.5.2
+lazy-object-proxy==1.6.0
 libarchive-c @ file:///tmp/build/80754af9/python-libarchive-c_1617780486945/work
 llvmlite==0.36.0
 locket==0.2.1
@@ -136,6 +138,7 @@ mpmath==1.2.1
 msgpack @ file:///C:/ci/msgpack-python_1612287368835/work
 multipledispatch==0.6.0
 mypy-extensions==0.4.3
+mysqlclient==2.0.3
 navigator-updater==0.2.1
 nbclassic @ file:///tmp/build/80754af9/nbclassic_1616085367084/work
 nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
@@ -150,6 +153,7 @@ numba @ file:///C:/ci/numba_1616774458845/work
 numexpr @ file:///C:/ci/numexpr_1618856738664/work
 numpy @ file:///C:/ci/numpy_and_numpy_base_1618497418457/work
 numpydoc @ file:///tmp/build/80754af9/numpydoc_1605117425582/work
+oauthlib==3.1.1
 olefile==0.46
 openpyxl @ file:///tmp/build/80754af9/openpyxl_1615411699337/work
 packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
@@ -188,11 +192,10 @@ pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1616182067796/work
 pyerfa @ file:///C:/ci/pyerfa_1619391071834/work
 pyflakes @ file:///home/ktietz/src/ci_ipy2/pyflakes_1612551159640/work
 Pygments @ file:///tmp/build/80754af9/pygments_1615143339740/work
-PyHamcrest @ file:///tmp/build/80754af9/pyhamcrest_1615748656804/work
-pykrx==1.0.14
-pylint @ file:///C:/ci/pylint_1617136058775/work
+pylint==2.8.2
 pyls-black @ file:///tmp/build/80754af9/pyls-black_1607553132291/work
 pyls-spyder @ file:///tmp/build/80754af9/pyls-spyder_1613849700860/work
+PyMySQL==1.0.2
 PyNaCl @ file:///C:/ci/pynacl_1595000047588/work
 pyodbc===4.0.0-unsupported
 pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
@@ -201,7 +204,6 @@ pyreadline==2.1
 pyrsistent @ file:///C:/ci/pyrsistent_1600141795814/work
 PySocks @ file:///C:/ci/pysocks_1605287845585/work
 pytest==6.2.3
-pytest-runner @ file:///tmp/build/80754af9/pytest-runner_1613936096563/work
 python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
 python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work
 python-language-server @ file:///tmp/build/80754af9/python-language-server_1607972495879/work
@@ -219,7 +221,7 @@ QtPy==1.9.0
 queuelib==1.6.1
 regex @ file:///C:/ci/regex_1617569893741/work
 requests @ file:///tmp/build/80754af9/requests_1608241421344/work
-requests-file==1.5.1
+requests-oauthlib==1.3.0
 rope @ file:///tmp/build/80754af9/rope_1602264064449/work
 Rtree @ file:///C:/ci/rtree_1618421009405/work
 ruamel-yaml-conda @ file:///C:/ci/ruamel_yaml_1616016967756/work
@@ -251,6 +253,7 @@ sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1
 spyder @ file:///C:/ci/spyder_1616776239898/work
 spyder-kernels @ file:///C:/ci/spyder-kernels_1614030842607/work
 SQLAlchemy @ file:///C:/ci/sqlalchemy_1618090063261/work
+sqlparse==0.4.1
 statsmodels==0.12.2
 sympy @ file:///C:/ci/sympy_1618255511605/work
 tables==3.6.1
@@ -261,13 +264,14 @@ textdistance @ file:///tmp/build/80754af9/textdistance_1612461398012/work
 threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
 three-merge @ file:///tmp/build/80754af9/three-merge_1607553261110/work
 tifffile @ file:///tmp/build/80754af9/tifffile_1619636090847/work
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
+toml==0.10.2
 toolz @ file:///home/linux1/recipes/ci/toolz_1610987900194/work
 tornado @ file:///C:/ci/tornado_1606942392901/work
 tqdm @ file:///tmp/build/80754af9/tqdm_1615925068909/work
 traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
-Twisted @ file:///C:/ci/twisted_1614874634735/work
-twisted-iocpsupport @ file:///C:/ci/twisted-iocpsupport_1614804644664/work
+tweepy==3.10.0
+Twisted==21.2.0
+twisted-iocpsupport==1.0.1
 typed-ast @ file:///C:/ci/typed-ast_1610466535590/work
 typing-extensions @ file:///home/ktietz/src/ci_mi/typing_extensions_1612808209620/work
 ujson @ file:///C:/ci/ujson_1611241570789/work
